[Edem] Landing Pages Links Added Contents and Design

--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Register_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/register.css" />
+<link rel="stylesheet" href="~/css/landingpage/register.css" />
 
 <div class="register-wrapper">
     <div class="container">
