--- a/Views/Homeowner/Feedback.cshtml
+++ b/Views/Homeowner/Feedback.cshtml
@@ -4,7 +4,7 @@
 }
 
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<link rel="stylesheet" href="~/css/feedback.css" />
+<link rel="stylesheet" href="~/css/homeowners/feedback.css" />
 <div class="container">
     <!-- Feedback Tabs -->
     <div class="feedback-tabs">
