--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Login";
 }
 
-<link rel="stylesheet" href="~/css/login.css" />
+<link rel="stylesheet" href="~/css/landingpage/login.css" />
 
 <div class="login-container">
     <div class="logo">
