--- a/Views/Homeowner/Community.cshtml
+++ b/Views/Homeowner/Community.cshtml
@@ -1,9 +1,8 @@
-@page
 @{
-    Layout = "~/Views/Shared/Dashboard_Nav.cshtml";
+    Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/community.css" />
+<link rel="stylesheet" href="~/css/homeowners/community.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <div class="community-wrapper">
