--- a/Views/Homeowner/History.cshtml
+++ b/Views/Homeowner/History.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/history.css" />
+<link rel="stylesheet" href="~/css/homeowners/history.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
