--- a/Views/Homeowner/UserProfile.cshtml
+++ b/Views/Homeowner/UserProfile.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/userprofile.css" />
+<link rel="stylesheet" href="~/css/homeowners/userprofile.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <div class="user-profile-container">
