Adding the ui for admin meaning there is new code you can see in AdminController.cs also inside the file model, ask me if there is any inquiries, Thanks all and have a great night

--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -49,7 +49,7 @@
 
         <!-- User Profile with Dropdown -->
         <div class="user-profile" onclick="toggleProfileDropdown()">
-            <span>@user.firstname @user.lastname</span>
+                <span style="text-transform: capitalize;">@user?.firstname @user?.lastname</span>
             <img src="~/images/user-default-picture.jpg" alt="User profile" />
             <!-- Dropdown Menu -->
             <div class="profile-dropdown">
